--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx webpack -c webpack.prod.js --mode production --progress",
+    "build": "webpack --config webpack.prod.js --mode production --progress",
     "dev": "webpack-dev-server --config webpack.dev.js",
     "watch": "npx webpack --config webpack.config.js"
   },
@@ -31,6 +31,7 @@
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.3",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.10",
     "webpack-dashboard": "^3.2.0",
     "webpack-dev-server": "^3.10.0",
